# tickytakuDMM

./: Cargo.toml
.github/workflows/: release.yml
src/: app.rs  app_db.rs  gamebanana.rs  gameinfo_gi.rs  main.rs  message.rs  mod_file.rs  mod_manager.rs  state.rs  ui.rs
src/components/: mod.rs  mod_card.rs  thumbnail.rs
src/pages/: import_mod.rs  mod_list.rs
src/update/: gamebanana.rs  import_mod.rs  mod.rs  mod_details.rs  mod_list.rs
src/view/: gamebanana.rs  import_mod.rs  mod.rs  mod_details.rs  mod_list.rs
