[package]
name = "tickytakuDMM"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "image"] }
rfd = "0.17.2"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Unifies with surrealdb → jsonwebtoken → aws-lc-rs so Windows builds without a system NASM install.
aws-lc-sys = { version = "0.40", features = ["prebuilt-nasm"] }
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-surrealkv"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
unarc-rs = "0.6"
tempfile = "3"
open = "5"